fix cards gap and add scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-
 .App {
   display: flex;
   flex-direction: column;
@@ -7,7 +6,6 @@
   min-height: 100vh;
   margin-left: 550px;
 }
-
 
 .open-modal-button {
   padding: 16px 16px;
@@ -23,7 +21,6 @@
 .open-modal-button:hover {
   background-color: #0056b3;
 }
-
 
 .modal-overlay {
   position: fixed;
@@ -44,11 +41,10 @@
   background: white;
   padding: 16px;
   border-radius: 8px;
-  max-width: 800px;
-  width: 90%;
+  max-width: 1300px; /* Increase the max-width */
+  width: 95%; /* Adjust the width percentage */
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
 }
-
 
 .modal-navbar {
   display: flex;
@@ -70,7 +66,6 @@
   gap: 6px;
 }
 
-
 .nav-logo {
   width: 30px;
   height: 30px;
@@ -83,13 +78,11 @@
   font-weight: bold;
 }
 
-
 .nav-name {
   font-size: 18px;
   font-weight: bold;
   color: #333;
 }
-
 
 .nav-item {
   margin: 0 16px;
@@ -108,7 +101,6 @@
 .nav-item:hover {
   color: #2a2a28;
 }
-
 
 .nav-icon {
   font-size: 14px;
@@ -134,6 +126,7 @@
 .close-button:hover {
   color: #ff0000;
 }
+
 .options-container {
   display: flex;
   justify-content: space-between;
@@ -159,7 +152,6 @@
   margin-left: auto;
 }
 
-
 .favorite-toggle-button {
   padding: 8px 16px;
   background-color: #007bff;
@@ -177,15 +169,18 @@
 
 .cards-container {
   display: flex;
-  gap: 6px;
+  gap: 30px; 
   flex-wrap: wrap;
   justify-content: center;
   margin-top: 16px;
+  max-height: 600px; 
+  overflow-y: auto;  /* Enable vertical scrolling when needed */
+  padding-right: 10px; 
 }
 
 .card {
   position: relative;
-  width: 150px;
+  width: calc((100% / 3) - 30px); /* Default for large screens */
   height: 200px;
   border: 1px solid #ddd;
   border-radius: 8px;
@@ -215,7 +210,6 @@
   border-radius: 4px;
   font-size: 12px;
 }
-
 
 .card-overlay {
   position: absolute;
@@ -256,7 +250,6 @@
   background: rgb(255, 0, 0);
 }
 
-
 .no-templates-message {
   text-align: center;
   font-size: 24px;
@@ -268,6 +261,20 @@
   text-align: center;
   font-size: 12px;
   color: #5b5858;
+}
+
+/* For screens with a width of 1280px or less */
+@media (max-width: 1280px) {
+  .card {
+    width: calc((100% / 2) - 10px); /* Two cards per row */
+  }
+}
+
+/* For screens with a width of 786px or less */
+@media (max-width: 786px) {
+  .card {
+    width: 100%; /* One card per row */
+  }
 }
 
 @media (max-width: 768px) {
@@ -302,11 +309,4 @@
     width: 90%;
     height: auto;
   }
-} 
-
-
-
-
-
-
-
+}
